--- a/PracticeDraw1/build.gradle
+++ b/PracticeDraw1/build.gradle
@@ -1,10 +1,20 @@
-apply plugin: 'com.android.application'
+////控制组件模式和集成模式
+//if (rootProject.ext.isApplication1) {
+//    apply plugin: 'com.android.application'
+//} else {
+//    apply plugin: 'com.android.library'
+//}
 
+apply plugin: 'com.android.library'
 android {
     compileSdkVersion 28
     buildToolsVersion "28.0.3"
     defaultConfig {
-        applicationId "com.hencoder.hencoderpracticedraw1"
+
+//        if (rootProject.ext.isApplication1){
+//            //组件模式下设置applicationId
+//            applicationId "com.hencoder.hencoderpracticedraw1"
+//        }
         minSdkVersion 18
         targetSdkVersion 25
         versionCode 1
