--- a/PracticeDraw2/build.gradle
+++ b/PracticeDraw2/build.gradle
@@ -1,10 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
     buildToolsVersion "28.0.3"
     defaultConfig {
-        applicationId "com.hencoder.hencoderpracticedraw2"
+//        applicationId "com.hencoder.hencoderpracticedraw2"
         minSdkVersion 18
         targetSdkVersion 25
         versionCode 1
