--- a/PracticeDraw3/build.gradle
+++ b/PracticeDraw3/build.gradle
@@ -1,10 +1,12 @@
-apply plugin: 'com.android.application'
+//apply plugin: 'com.android.application'
+
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
     buildToolsVersion "28.0.3"
     defaultConfig {
-        applicationId "com.hencoder.hencoderpracticedraw3"
+//        applicationId "com.hencoder.hencoderpracticedraw3"
         minSdkVersion 18
         targetSdkVersion 25
         versionCode 1
