--- a/PracticeDraw4/build.gradle
+++ b/PracticeDraw4/build.gradle
@@ -1,10 +1,11 @@
-apply plugin: 'com.android.application'
+//apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
     buildToolsVersion "28.0.3"
     defaultConfig {
-        applicationId "com.hencoder.hencoderpracticedraw4"
+//        applicationId "com.hencoder.hencoderpracticedraw4"
         minSdkVersion 18
         targetSdkVersion 25
         versionCode 1
