--- a/PracticeDraw1/build.gradle
+++ b/PracticeDraw1/build.gradle
@@ -27,6 +27,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    sourceSets {
+        main {
+            manifest.srcFile 'src/main/library/AndroidManifest.xml'
+        }
+    }
 }
 
 dependencies {
