--- a/PracticeDraw7/build.gradle
+++ b/PracticeDraw7/build.gradle
@@ -17,6 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            manifest.srcFile 'src/main/library/AndroidManifest.xml'
+        }
+    }
 }
 
 dependencies {
